--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,6 +28,10 @@
     border: none;
 }
 
+.mark {
+    background-color: #f5f5f5;
+}
+
 /*INDEX.html*/
 .btn-outline-dark:hover {
     color: #212529;
@@ -179,7 +183,31 @@
 
 .translation-card {
     background-color: #fff;
-    box-shadow: 0 0 5px rgb(0 0 0 / 25%);
+    box-shadow: 0 0 5px rgba(0,0,0,0.25);
     border-radius: 8px;
     position: relative;
+}
+
+.card-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.card-title {
+    margin: 0;
+}
+
+.card-pronounce:before {
+    content: "";
+    display: block;
+    background-image: url("../images/audio-speaker-on.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 30px;
+    height: 30px;
+
+}
+
+.card-lang {
+    margin: 0;
 }
