--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,3 @@
-
 /*@hoverColor: #fec400;*/
 .visually-hidden:not(:focus):not(:active) {
     position: absolute;
@@ -23,7 +22,7 @@
     border-top: 3px solid #fec400;
 }
 
-.nav-tabs .nav-item:hover  {
+.nav-tabs .nav-item:hover {
     background-color: transparent;
     border: none;
 }
@@ -37,7 +36,7 @@
 .nav-link {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
-    color: rgba(0,0,0,0.55);
+    color: rgba(0, 0, 0, 0.55);
     font-size: 18px;
 }
 
@@ -52,12 +51,12 @@
 .form-control:focus {
     border-color: #0e6efd;
     border-right: transparent;
-    box-shadow: -4px 0 0 0.25rem rgba(14,110,253,0.25);
+    box-shadow: -4px 0 0 0.25rem rgba(14, 110, 253, 0.25);
 }
 
-.form-control:focus+button {
+.form-control:focus + button {
     border-color: #0e6efd;
-    box-shadow: 5px 0 0 0.25rem rgba(14,110,253,0.25);
+    box-shadow: 5px 0 0 0.25rem rgba(14, 110, 253, 0.25);
 }
 
 .search-input {
@@ -75,15 +74,21 @@
 }
 
 .btn-outline-primary:hover {
-    background-color: rgba(248,249,250,0.8);
+    background-color: #0e6efd;
     border-color: #0e6efd;
 }
 
 .btn-outline-primary:focus {
     box-shadow: none;
 }
+
 .btn-outline-primary:active {
     box-shadow: none;
+}
+
+.btn-outline-secondary:hover {
+    background-color: #6c757d;
+    border-color: #6c757d;
 }
 
 /*DICTIONARY.html
@@ -93,16 +98,12 @@
     fill: #212529;
 }
 
-.search-icon:hover,
-.search-icon:focus {
-    opacity: 0.6;
-}
-
-/*DICTIONARY.html
-  translation
-  translation-card*/
-
 .sound-on {
     width: 30px;
     height: 30px;
+}
+
+#words-list-container ul {
+    height: 600px;
+    overflow-y: auto;
 }
